@@ -1,5 +1,9 @@
 Version: $Id$ $Name$
 
+purple (05/11/05)
+----------------------
++ Added some session-related opcodes to worldopcodes.xml
+
 dophaZ (04/17/05)
 -----------------------
 + Updated version to 5.0.0.20
